# tpo-lab2

./: CMakeLists.txt
.github/workflows/: ci.yml
src/: main.cpp  math.cpp  math.hpp
test/: base_test.cpp  ext_test.cpp  full_test.cpp  log_test.cpp  mock_math.hpp
